refactor: rename "push" to "import"
